<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleStyle"
        android:text="@string/setup_over_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_over_number_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_number"
            android:layout_marginTop="5dp"
            android:background="@drawable/listview_divider"
            android:contentDescription="@string/noimage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_mode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/setup_over_mode_title"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_lock_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/lock"
            android:contentDescription="@string/noimage" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mode_title"
            android:background="@drawable/listview_divider"
            android:contentDescription="@string/noimage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tv_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/setup_over_edit_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/select_reset_setup_bg"
            android:text="@string/setup_over_edit"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_edit"
            android:layout_marginTop="5dp"
            android:background="@drawable/listview_divider"
            android:contentDescription="@string/noimage" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp"
        android:text="@string/setup_over_module_title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/setup_over_module1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/setup_over_module2"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/setup_over_module3"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/setup_over_module4"
        android:textSize="16sp" />

</LinearLayout>